Fix: Aligned Resources Text evenly

--- a/src/Pages/Resources/Resources.css
+++ b/src/Pages/Resources/Resources.css
@@ -90,7 +90,7 @@
 .resource {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
